# ChangeLog for sci-libs/dealii
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Jan 2014; Justin Lecher <jlec@gentoo.org> dealii-9999.ebuild,
  metadata.xml:
  Add missing die; shorten DESCRIPTION; add dummy locel USE description; Fix
  RDEPEND.suspect
